--- a/open.config
+++ b/open.config
@@ -133,3 +133,5 @@ CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_whereis=y
+CONFIG_PACKAGE_aliyundrive-webdav=y
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
